<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/CONTENT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:minWidth="300dp"
        android:minHeight="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/image_margin_top"
            android:padding="15dp"
            app:srcCompat="@drawable/abastece" />

        <TextView
            android:id="@+id/titulo"
            style="@style/TEXTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_extra_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            style="@style/TEXTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/precoAlcool"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edAlcool"
            style="@style/INPTEXTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:ems="10"
            android:text="@string/palcool"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TEXTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/precoGasolina"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edGasolina"
            style="@style/INPTEXTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:ems="10"
            android:text="@string/pgasolina"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="@dimen/text_size_large"

            android:textStyle="bold" />

        <Switch
            android:id="@+id/swPercentual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/_75"
            android:textAlignment="textStart"
            android:textColorLink="#000"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCalcular"
            style="@style/BTNCALC"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="@dimen/button_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:text="@string/calcular"/>

        <TextView
            android:id="@+id/textMsg"
            style="@style/TEXTCOLOR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/resultado"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>